[gd_scene load_steps=8 format=3 uid="uid://vsciytrepm8n"]

[ext_resource type="Theme" uid="uid://duvsd7ylqvfdg" path="res://ressources/themes/default_theme.tres" id="1_bwx2g"]
[ext_resource type="Script" path="res://scripts/ui/pause.gd" id="1_ic5wy"]
[ext_resource type="PackedScene" uid="uid://cgl30ut86d8od" path="res://scenes/ui/MenuOption.tscn" id="3_x6ptf"]
[ext_resource type="AudioStream" uid="uid://b2k84l6f45ip0" path="res://ressources/assets/audio/Electronic bip 3.wav" id="4_8rqh3"]

[sub_resource type="Animation" id="Animation_db5es"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsMenu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.215, 0.215)]
}

[sub_resource type="Animation" id="Animation_pfnx0"]
resource_name = "pop_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsMenu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.215, 0.215), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wux73"]
_data = {
"RESET": SubResource("Animation_db5es"),
"pop_in": SubResource("Animation_pfnx0")
}

[node name="pause" type="CanvasLayer"]
process_mode = 3
layer = 9
visible = false
script = ExtResource("1_ic5wy")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 0.054902)

[node name="OptionsMenu" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.215, 0.215)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MenuPanel" type="Panel" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -97.0
offset_right = 68.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_bwx2g")

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -39.0
offset_right = 30.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="OptionsMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 31
text = "PAUSE"

[node name="ResumeButton" type="Button" parent="OptionsMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "RESUME"

[node name="RestartButton" type="Button" parent="OptionsMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "RESTART LEVEL"

[node name="OptionsButton" type="Button" parent="OptionsMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="OptionsMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "QUIT"

[node name="MenuOption" parent="OptionsMenu/MenuPanel" instance=ExtResource("3_x6ptf")]
visible = false

[node name="HoverButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8rqh3")
volume_db = -25.0
pitch_scale = 0.7

[node name="AnimationShowMenu" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wux73")
}

[connection signal="mouse_entered" from="OptionsMenu/MenuPanel/VBoxContainer/ResumeButton" to="." method="_mouse_entered"]
[connection signal="pressed" from="OptionsMenu/MenuPanel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="OptionsMenu/MenuPanel/VBoxContainer/RestartButton" to="." method="_mouse_entered"]
[connection signal="pressed" from="OptionsMenu/MenuPanel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="mouse_entered" from="OptionsMenu/MenuPanel/VBoxContainer/OptionsButton" to="." method="_mouse_entered"]
[connection signal="pressed" from="OptionsMenu/MenuPanel/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="OptionsMenu/MenuPanel/VBoxContainer/QuitButton" to="." method="_mouse_entered"]
[connection signal="pressed" from="OptionsMenu/MenuPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
